--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>Is your Birth-Date Lucky?</h1>
+<label for="date-of-birth">Date of Birth</label>
+<input id="date-of-birth" type="date">
+<label for="lucky-number">lucky number</label>
+<input id="lucky-number" type="number">
+<button id="check-button">check</button>
+<div id="output-box" ></div>
+    
     
 </body>
 <script src="main.js"></script>
